# midi-2

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix
lib/midi-2/: Cargo.toml  README.md
lib/midi-2-ci/: Cargo.toml  README.md
lib/midi-2-protocol/: Cargo.toml  README.md
lib/midi-2-protocol/src/: field.rs  lib.rs  message.rs  packet.rs
lib/midi-2-protocol/src/message/: system.rs  voice.rs
lib/midi-2-protocol/src/message/system/: common.rs  real_time.rs
lib/midi-2-protocol/src/message/voice/: attribute.rs
lib/midi-2/src/: lib.rs
