[workspace]
resolver = "2"
members = ["lib/*"]

[workspace.package]
authors = ["Andrew Cherry (kolektiv)"]
categories = ["data-structures", "encoding", "multimedia", "multimedia::audio"]
edition = "2021"
keywords = ["midi", "protocol", "ump"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/kolektiv/midi-2"
rust-version = "1.64.0"
version = "0.0.1-alpha.0"

[workspace.dependencies]
arbitrary-int = "1"
bitvec = "1"
num_enum = "0.7"
paste = "1"
thiserror = "2"

[workspace.lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
nursery = "warn"
pedantic = "warn"
perf = "deny"
restriction = "allow"
style = "deny"
suspicious = "deny"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
unused = "warn"
