[package]
authors.workspace = true
categories.workspace = true
description = "MIDI 2[.x] Capability Inquiry"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "midi-2-ci"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

[lints]
workspace = true
