[package]
authors.workspace = true
categories.workspace = true
description = "MIDI 2[.x] Implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "midi-2"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
midi-2-ci = { path = "../midi-2-ci" }
midi-2-protocol = { path = "../midi-2-protocol" }

[lints]
workspace = true
